// Lading capture payloads
syntax = "proto3";

package lading.proto.capture.v1;

// The kinds of metrics that Lading produces.
enum MetricKind {
  // Unset
  METRIC_KIND_UNSPECIFIED = 0;
  // A monotonically increasing value.
  METRIC_KIND_COUNTER = 1;
  // A point-in-time value.
  METRIC_KIND_GAUGE = 2;
}

// A capture value container, called a 'line' for historical reasons.
message Line {
  // The name of the metric recorded by this line.
  string name = 2;
  // The kind of metric recorded by this line.
  MetricKind kind = 3;
  // The value of the metric recorded by this line.
  double value = 4;
  // Labels associated with this line.
  map<string, string> labels = 5;
}

// A collection of Lines
message Payload {
  // An ID that is unique to a single lading run.
  string run_id = 1;
  // The time in milliseconds that this Payload was collected.
  uint64 time = 2;
  // Global labels to be applied to every Line.
  map<string, string> global_labels = 3;
  // The collection of Line instances
  repeated Line lines = 4;
}
